<package>
  <name>python_marshmallow</name>
  <version>:{version}</version>
  <description>
A lightweight library for converting complex objects to and from simple Python datatypes. http://marshmallow.rtfd.org/
  </description>

  <license>MIT</license>

  <url type="repository">https://github.com/marshmallow-code/marshmallow</url>
  <url type="bugtracker">https://github.com/marshmallow-code/marshmallow/issues</url>

  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-setuptools</build_depend>

</package>



